css/main.scss
---
---

/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

/* Global Reset */
* {
  margin: 0;
  padding: 0;
}

html, body { }

body {
  background-color: #fdfdfd;
  font-size: small;
  font-family: "Open Sans";
}

h1, h2, h3, h4, h5, h6 {
  font-size: 100%; }

h1 { margin-bottom: 1em; }
p { padding-top: 1em; }

a         { color: #303030; text-decoration: none;}
a:hover   { color: #6CB8F3; }

/*****************************************************************************/
/*
/* Home
/*
/*****************************************************************************/

#miniabout {
  padding-top: 2em;
  padding-bottom: 2em;
  border-bottom: 1px solid #66B5F3;
  margin-bottom: 2em;
}

.posts {
  display: inline-block;
  list-style-type: none;
  max-width: 435px;
  height: 140px;
  margin: 6.2px;
  padding: 14px;
  background-color: #fff;
  font-weight: 400;
  border: 1px solid #ddd;
  transition: background-color .2s ease-out;
  vertical-align: top;
}

@media screen and (max-width: 990px) {
  .posts {
    height: auto;
    max-width: 960px;
  }
}

.posts:hover {
  background-color: #fafafa;
}

.posts li {
  line-height: 1.75em;
}

.date {
  color: #555;
  font-size: 70%;
  float: right;
}

.postDate {
  color: #555;
  font-size: 90%;
  text-align: right;
  padding: 0;
}

.posts .body {
  color: #000;
}

/*****************************************************************************/
/*
/* Navigation
/*
/*****************************************************************************/

#navigation {
  background-color: #fff;
  font-size: 1.2em;
  width: 100%;
  margin: 0 auto;
  padding-top: 1em;
  padding-bottom: 1em;
  position: relative;
  z-index: 1;
  box-shadow: 0px 0px 15px #888888;

  .nav-toggle {
    padding-left: .8em;
  }

  ul {
    max-width: 960px;
    list-style-type:none;
    display: block;
    margin: 0 auto;

    li {
      text-align: center;
      width: 25%;
      display: inline-block;
      border-bottom: none;

      &:first-child {
        margin-left: 0px;

        a {
          color: #66B5F3;
          font-weight: 600;

          &:hover {
            color: #9CCFF7;
          }
        }
      }
      a {
        transition: color .1s ease-out;
      }
    }
  }
}

@media screen and (max-width: 600px) {
  #navigation {
    padding-top: 0;
    padding-bottom: 0;

    ul {
      li {
        text-align: left;
        width: calc(100% - 3em);
        display: block;
        border-top: 1px solid #ddd;
        padding: .5em 1.5em;
      }
    }
  }
}

/*****************************************************************************/
/*
/* Footer
/*
/*****************************************************************************/

#footer {
  width: 100%;
  background-color: #F3F3F3;
  position: relative;

  #footerCanvas {
    width: 100%;
    height: 200px;
    display: block;
  }

  .footerContent {
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    // margin: 0 auto;



    .centerer {
      max-width: 960px;
      padding: 30px 0 0 ;
      margin: 0 auto;
    }

    .padLeft {
      padding-left: 20px;
    }

    h3 {
      font-size: 20px;
    }

    ul {
      margin-top: 10px;
      font-size: 30px;
      list-style-type: none;

      li {
        display: inline;

        a {
          transition: color .2s ease-out;
          margin-right: 20px;
        }
      }
    }
  }
}

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.content {
  font-size: 115%;
  max-width: 960px;
  line-height: 1.2em;
  margin: 0 auto 30px;
  background-color: #fdfdfd;
  padding-left: 1em;
  padding-right: 1em;
  position: relative;
  z-index: 0;
}

.accent {
  color: #126FB8;
}

.accent:visited {
  color: #126FB8;
}

.header {
  font-weight: 300;
  font-size: 1.1em;
}

.header a {
  font-weight: 600;
}

.title {
  display: inline-block;
  margin-bottom: .3em;
  font-weight: 300;
  line-height: .9em;
}

.title a {
  color: #66B5F3;
  font-weight:600;
}

.header a.extra {
  color: #aaa;
  margin-left: 1em;
}

.header a.extra:hover {
  color: #000;
}

/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/
.post {
  max-width: 700px;
  margin: 30px auto 10px;
}

/* standard */
.post pre {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .4em;
}

.post ul, .post ol {
  margin-left: 1.35em;
}

.post code {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .2em;
}

.post pre code {
  border: none;
}

/* terminal */
.post pre.terminal {
  border: 1px solid #000;
  background-color: #333;
  color: #FFF;
}

.post pre.terminal code {
  background-color: #333;
}

